--- a/AsyncInn/Views/Hotel/Index.cshtml
+++ b/AsyncInn/Views/Hotel/Index.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h2>Hotels</h2>
-        <div class="itemcount"> 
+        <div class="itemcount">
             <p>Count</p>
             <p>@Html.TextBox("count", Model.Count().ToString())</p>
         </div>
@@ -24,6 +24,12 @@
                asp-action="Index">Go Home</a>
         </p>
     </header>
+    <form asp-controller="Hotel" asp-action="Index" method="get" class="form-group">
+            <p>
+                <input type="text" placeholder="Enter search criteria" name="SearchString">
+                <input type="submit" value="Search" class="btn btn-primary">
+            </p>
+    </form>
     <table class="table">
         <thead>
             <tr>
@@ -54,35 +60,35 @@
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.State)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Country)
-                </td>
-                @* HELP! How can I make the count publish? The 'td' is rendering, but it's empty.*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.HotelInventory.Count)
-                </td>
-                <td class="item-links">
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> @*|
-            <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Phone)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.State)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Country)
+                    </td>
+                    @* HELP! How can I make the count publish? The 'td' is rendering, but it's empty.*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.HotelInventory.Count)
+                    </td>
+                    <td class="item-links">
+                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> @*|
+                            <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
