--- a/AsyncInn/Views/Amenity/Index.cshtml
+++ b/AsyncInn/Views/Amenity/Index.cshtml
@@ -24,6 +24,12 @@
                asp-action="Index">Go Home</a>
         </p>
     </header>
+    <form asp-controller="Amenity" asp-action="Index" method="get" class="form-group">
+        <p>
+            <input type="text" placeholder="Enter search criteria" name="SearchString">
+            <input type="submit" value="Search" class="btn btn-primary">
+        </p>
+    </form>
     <table class="table">
         <thead>
             <tr>
@@ -40,9 +46,9 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
-                    <td class="item-links" >
+                    <td class="item-links">
                         @*<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |*@
+                            <a asp-action="Details" asp-route-id="@item.ID">Details</a> |*@
                         <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
                     </td>
                 </tr>
