--- a/AsyncInn/Views/RoomPlan/Edit.cshtml
+++ b/AsyncInn/Views/RoomPlan/Edit.cshtml
@@ -17,6 +17,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
+                <label asp-for="RoomType" class="control-label"></label>
+                <input asp-for="RoomType" class="form-control" />
+                <span asp-validation-for="RoomType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Layout" class="control-label"></label>
                 <select asp-for="Layout" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Layout>()"></select>
                 <span asp-validation-for="Layout" class="text-danger"></span>
